# ISHACARE

./: README.md  REQUIRMENTS.TXT  app.py  pyproject.toml  requirements.txt
Backend/: main.py
Backend/Models/: ml_model.py  model.pkl  train_model.py
Backend/pipeline/: pipeline.py
Backend/routes/: analyze.py
Backend/services/: alerts.py  automation.py  cleaner.py  confidence.py  extractor.py  predictor.py  scorer.py
